ndb - bug#49737 - fix correct error message if encountering truncated LCP file